<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:text="@string/valor_titulo"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtExaParcial"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.208" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:text="@string/valor_btn"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPromedio" />

    <TextView
        android:id="@+id/txtExaParcial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="16dp"
        android:text="@string/valor_txtExaParcial"
        app:layout_constraintBottom_toTopOf="@+id/etExaParcial"
        app:layout_constraintStart_toStartOf="@+id/etExaParcial" />

    <TextView
        android:id="@+id/txtProme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="292dp"
        android:text="@string/valor_txtProm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/etExaFinal" />

    <TextView
        android:id="@+id/txtExaFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="12dp"
        android:text="@string/valor_txtExaFinal"
        app:layout_constraintBottom_toTopOf="@+id/etExaFinal"
        app:layout_constraintStart_toStartOf="@+id/etExaFinal" />

    <EditText
        android:id="@+id/etPromedio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/txtProme"
        app:layout_constraintTop_toBottomOf="@+id/txtProme" />

    <EditText
        android:id="@+id/etExaFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/txtProme"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etExaParcial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/txtExaFinal"
        app:layout_constraintStart_toStartOf="@+id/txtExaFinal" />

</androidx.constraintlayout.widget.ConstraintLayout>