<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/txtTituloResultado"
        android:layout_width="272dp"
        android:layout_height="0dp"
        android:layout_marginTop="304dp"
        android:layout_marginBottom="67dp"
        android:text="@string/valor_txtTituloResultado"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/txtenunciado1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtenunciado1"
        android:layout_width="148dp"
        android:layout_height="0dp"
        android:layout_marginEnd="165dp"
        android:layout_marginBottom="48dp"
        android:text="@string/valor_enunciado1"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txtNota"
        app:layout_constraintEnd_toEndOf="@+id/txtNota"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloResultado" />

    <TextView
        android:id="@+id/txtEnunciado2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="102dp"
        android:text="@string/valor_enunciado2"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txtAproDesa"
        app:layout_constraintEnd_toStartOf="@+id/txtNota"
        app:layout_constraintTop_toBottomOf="@+id/txtNota" />

    <TextView
        android:id="@+id/txtNota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        android:text="TextView"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/txtEnunciado2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtenunciado1" />

    <TextView
        android:id="@+id/txtAproDesa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginBottom="393dp"
        android:text="TextView"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtEnunciado2"
        app:layout_constraintTop_toBottomOf="@+id/txtEnunciado2" />
</androidx.constraintlayout.widget.ConstraintLayout>